# finance-analyser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: app.py  config.py  database.py
src/models/: __init__.py  transaction.py
src/services/: __init__.py  analytics_service.py  annotation_service.py  pipeline.py  processing_service.py  transaction_service.py
