[project]
name = "finance_analyser"
version = "0.1.0"
description = "Application to track expenses and generate insights"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.7",
    "nicegui>=3.5.0",
    "plotly>=6.5.2",
    "pydantic-settings>=2.12.0",
    "pywebview>=6.1",
    "sqlmodel>=0.0.31",
]
